@@ -359,14 +359,27 @@ int	NET_IF_COLLISIONS(const char *cmd, const char *param, unsigned flags, AGENT_
 
 int	NET_TCP_LISTEN(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *result)
 {
-	char	command[MAX_STRING_LEN];
-	int	res;
+	char		tmp[8], command[64];
+	zbx_uint64_t	port;
+	int		res;
 
 	assert(result);
 
 	init_result(result);
 
-	zbx_snprintf(command, sizeof(command), "netstat -an | grep '*.%s\\>' | wc -l", param);
+	if (num_param(param) > 1)
+		return SYSINFO_RET_FAIL;
+
+	if (0 != get_param(param, 1, tmp, sizeof(tmp)))
+		return SYSINFO_RET_FAIL;
+
+	if (FAIL == is_uint64(tmp, &port))
+		return SYSINFO_RET_FAIL;
+
+	if (port < 1 || port > 65536)
+		return SYSINFO_RET_FAIL;
+
+	zbx_snprintf(command, sizeof(command), "netstat -an | grep '*." ZBX_FS_UI64 "\\>' | wc -l", port);
 
 	if (SYSINFO_RET_FAIL == (res = EXECUTE_INT(NULL, command, flags, result)))
 		return res;
